--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,11 +1,11 @@
 .footer {
   width: 100%;
-  background-color: #DEF2DE;
+  background-color: #def2de;
 }
 
 .inner {
   width: 100%;
-  padding: 48px 16px 48px;
+  padding: 48px 20px 48px;
   box-sizing: border-box;
 }
 
@@ -25,7 +25,7 @@
 .logoIcon {
   width: 124px;
   height: 36px;
-  fill: #1B391B;
+  fill: #1b391b;
 }
 
 .top > :nth-child(2) {
@@ -40,7 +40,7 @@
   width: 100%;
   height: 1px;
   background: rgba(27, 57, 27, 0.15);
-  margin: 40px 0 24px;
+  margin: 32px 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -70,15 +70,11 @@
     justify-self: center;
     width: auto;
   }
-
-  .divider {
-    margin: 32px 0;
-  }
 }
 
 @media screen and (min-width: 1440px) {
   .inner {
-    padding: 48px 64px 80px;
+    padding: 80px 64px;
   }
 
   .top {
@@ -99,9 +95,5 @@
   .top > :nth-child(3) {
     grid-column: auto;
     justify-self: end;
-  }
-
-  .divider {
-    margin: 40px 0 32px;
   }
 }
