--- a/components/Footer/FooterNav/FooterNav.module.css
+++ b/components/Footer/FooterNav/FooterNav.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: 24px;
 
   list-style: none;
   margin: 0;
@@ -10,7 +10,7 @@
 }
 
 .link {
-  color: #1B391B;
+  color: #1b391b;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -21,14 +21,13 @@
 
 .link:hover,
 .link:focus {
-  color: #4A9849;
+  color: #4a9849;
 }
 
 @media screen and (min-width: 768px) {
   .list {
     flex-direction: row;
     justify-content: center;
-    gap: 48px;
+    gap: 24px;
   }
 }
-
