--- a/components/Footer/SocialList/SocialList.module.css
+++ b/components/Footer/SocialList/SocialList.module.css
@@ -9,12 +9,29 @@
 }
 
 .link {
-  color: #1B391B;
+  color: #1b391b;
   transform: translateY(-2px);
+  transition: color 250ms ease;
+}
+
+.link:hover,
+.link:focus {
+  color: #4a9849;
 }
 
 .icon {
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .list {
+    gap: 12px;
+  }
+
+  .icon {
+    width: 24px;
+    height: 24px;
+  }
 }
